@@ -1,4 +1,4 @@
-﻿// This work is licensed to jonnyli1125 (Jonny Li) under a Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License.
+// This work is licensed to jonnyli1125 (Jonny Li) under a Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License.
 // You may obtain a copy of the License at: http://creativecommons.org/licenses/by-nc-sa/3.0/
 
 using System;
@@ -7,66 +7,96 @@ using System.Threading;
 
 namespace MCDawn
 {
-    public class CmdDome : Command
+    public class CmdPyramid : Command
     {
-        public override string name { get { return "dome"; } }
-        public override string[] aliases { get { return new string[] { "sphere" }; } }
+        public override string name { get { return "pyramid"; } }
+        public override string[] aliases { get { return new string[] { "" }; } }
         public override string type { get { return "build"; } }
         public override bool museumUsable { get { return true; } }
-        public override LevelPermission defaultRank { get { return LevelPermission.Builder; } }
+        public override LevelPermission defaultRank { get { return LevelPermission.AdvBuilder; } }
 
         public override void Use(Player p, string message)
         {
             if (p == null) { Player.SendMessage(p, "Command not executable from Console."); return; }
-            if (message.Split(' ').Length > 3 || message.Split(' ').Length < 2) { Help(p); return; }
+            if (message.Split(' ').Length > 4 || message.Split(' ').Length < 3) { Help(p); return; }
             ushort radius;
             if (!ushort.TryParse(message.Split(' ')[0], out radius)) { Player.SendMessage(p, "Invalid radius."); return; }
-            else if (radius < 1) { Player.SendMessage(p, "Cannot have negative radius."); return; }
-            byte type = Block.Byte(message.Split(' ')[1]);
+            else if (radius < 1) { Player.SendMessage(p, "Radius must be larger than 0."); return; }
+            ushort verticalExpansion;
+            if (!ushort.TryParse(message.Split(' ')[1], out verticalExpansion)) { Player.SendMessage(p, "Invalid vertical expansion."); return; }
+            else if (radius < 1) { Player.SendMessage(p, "Vertical expansion must be larger than 0."); return; }
+            byte type = Block.Byte(message.Split(' ')[2]);
             if (type == 255) { Player.SendMessage(p, "Block could not be found."); return; }
-            DomeType domeType;
-            if (message.Split(' ').Length == 2) domeType = DomeType.Hollow;
+            PyramidType pyramidType;
+            if (message.Split(' ').Length == 3) pyramidType = PyramidType.Hollow;
             else
             {
-                switch (message.Split(' ')[2].ToLower())
+                switch (message.Split(' ')[3].ToLower())
                 {
-                    case "hollow": domeType = DomeType.Hollow; break;
-                    case "solid": domeType = DomeType.Solid; break;
+                    case "hollow": pyramidType = PyramidType.Hollow; break;
+                    case "solid": pyramidType = PyramidType.Solid; break;
                     default: Help(p); return;
                 }
             }
-            CreateDome(p, type, domeType, radius);
+            CreatePyramid(p, type, pyramidType, radius, verticalExpansion);
         }
 
-        public void CreateDome(Player p, byte type, DomeType domeType, ushort radius)
+        public void CreatePyramid(Player p, byte type, PyramidType pyramidType, ushort radius, ushort verticalExpansion)
         {
             List<Pos> buffer = new List<Pos>();
             Level level = p.level;
-            ushort cx = (ushort)(p.pos[0] / 32), cy = (ushort)(p.pos[1] / 32), cz = (ushort)(p.pos[2] / 32);
-            ushort sx = (ushort)(cx - radius - 1), sy = (ushort)(cy - radius - 1), sz = (ushort)(cz - radius - 1), ex = (ushort)(cx + radius + 1), ey = (ushort)(cy + radius + 1), ez = (ushort)(cz + radius + 1);
-            if (domeType == DomeType.Hollow)
+            ushort cx = (ushort)(p.pos[0] / 32), cy = (ushort)((p.pos[1] / 32) - 1), cz = (ushort)(p.pos[2] / 32);
+            ushort sx = (ushort)(cx - radius - 1), sy = cy, sz = (ushort)(cz - radius - 1), ex = (ushort)(cx + radius + 1), ey = (ushort)(cy + (radius * verticalExpansion)), ez = (ushort)(cz + radius + 1);
+            Pos pos = new Pos(); pos.x = cx; pos.y = ey; pos.z = cz;
+            for (ushort iy = 0; iy < verticalExpansion; iy++)
+                for (ushort ix = cx; ix > (ushort)(cx - 2); ix--)
+                    for (ushort iz = cz; iz > (ushort)(cz - 2); iz--)
+                        if (level.GetTile(ix, (ushort)(ey + iy), iz) != type)
+                        {
+                            pos.x = ix; pos.y = (ushort)(ey + iy); pos.z = iz;
+                            buffer.Add(pos);
+                        }
+            int temp = 0;
+            if (pyramidType == PyramidType.Hollow)
             {
-                for (ushort x = sx; x < ex; x++)
-                    for (ushort y = sy; y < ey; y++)
+                for (ushort y = sy; y < ey; y++)
+                {
+                    for (ushort x = sx; x < ex; x++)
                         for (ushort z = sz; z < ez; z++)
-                            if (Math.Round(Distance(cx, cy, cz, x, y, z)) == radius)
+                            if (x == sx || x == (ushort)(ex - 1) || z == sz || z == (ushort)(ez - 1))
                                 if (level.GetTile(x, y, z) != type)
                                 {
-                                    Pos pos = new Pos(); pos.x = x; pos.y = y; pos.z = z;
+                                    pos.x = x; pos.y = y; pos.z = z;
                                     buffer.Add(pos);
                                 }
+                    temp++;
+                    if (temp == verticalExpansion)
+                    {
+                        temp = 0;
+                        sx += 1; ex -= 1;
+                        sz += 1; ez -= 1;
+                    }
+                }
             }
-            else if (domeType == DomeType.Solid)
+            else if (pyramidType == PyramidType.Solid)
             {
-                for (ushort x = sx; x < ex; x++)
-                    for (ushort y = sy; y < ey; y++)
+                for (ushort y = sy; y < ey; y++)
+                {
+                    for (ushort x = sx; x < ex; x++)
                         for (ushort z = sz; z < ez; z++)
-                            if (Math.Round(Distance(cx, cy, cz, x, y, z)) <= radius)
-                                if (level.GetTile(x, y, z) != type)
-                                {
-                                    Pos pos = new Pos(); pos.x = x; pos.y = y; pos.z = z;
-                                    buffer.Add(pos);
-                                }
+                            if (level.GetTile(x, y, z) != type)
+                            {
+                                pos.x = x; pos.y = y; pos.z = z;
+                                buffer.Add(pos);
+                            }
+                    temp++;
+                    if (temp == verticalExpansion)
+                    {
+                        temp = 0;
+                        sx += 1; ex -= 1;
+                        sz += 1; ez -= 1;
+                    }
+                }
             }
             Execute(p, buffer, type);
         }
@@ -106,8 +136,8 @@ namespace MCDawn
 
                         if (counter >= p.group.maxBlocks)
                         {
-                            Player.SendMessage(p, "Tried to dome " + buffer.Count + " blocks, but your limit is " + p.group.maxBlocks + ".");
-                            Player.SendMessage(p, "Executed dome up to limit.");
+                            Player.SendMessage(p, "Tried to pyramid " + buffer.Count + " blocks, but your limit is " + p.group.maxBlocks + ".");
+                            Player.SendMessage(p, "Executed pyramid up to limit.");
                         }
                         else
                         {
@@ -120,8 +150,8 @@ namespace MCDawn
 
                     if (buffer.Count > p.group.maxBlocks)
                     {
-                        Player.SendMessage(p, "You tried to dome " + buffer.Count + " blocks.");
-                        Player.SendMessage(p, "You cannot dome more than " + p.group.maxBlocks + ".");
+                        Player.SendMessage(p, "You tried to pyramid " + buffer.Count + " blocks.");
+                        Player.SendMessage(p, "You cannot pyramid more than " + p.group.maxBlocks + ".");
                         return;
                     }
 
@@ -150,18 +180,14 @@ namespace MCDawn
             })); t.IsBackground = true; t.Priority = ThreadPriority.Lowest; t.Start();
         }
 
-        public double Distance(double x1, double y1, double z1, double x2, double y2, double z2)
-        {
-            double dx = x2 - x1, dy = y2 - y1, dz = z2 - z1;
-            return Math.Sqrt(Math.Pow(dx, 2) + Math.Pow(dy, 2) + Math.Pow(dz, 2));
-        }
-
         public override void Help(Player p)
         {
-            Player.SendMessage(p, "/dome <radius> <block> [hollow/solid] - Creates a dome around you.");
+            Player.SendMessage(p, "/pyramid <radius> <vertical expansion> <block> [hollow/solid] - Creates a pyramid around and above you.");
+            Player.SendMessage(p, "The vertical expansion determines what to multiply the height of your pyramid by.");
         }
 
-        public enum DomeType { Hollow, Solid }
+        public enum PyramidType { Hollow, Solid }
         public struct Pos { public ushort x, y, z; }
+        public struct CatchPos { public ushort x, y, z; public byte type; }
     }
 }
