@@ -93,6 +93,8 @@
     <Compile Include="AutoSaver.cs" />
     <Compile Include="Commands\Building\CmdDome.cs" />
     <Compile Include="Commands\Building\CmdReflection.cs" />
+    <Compile Include="Commands\Building\CmdCone.cs" />
+    <Compile Include="Commands\Building\CmdPyramid.cs" />
     <Compile Include="Commands\Games\CmdPushBallTeam.cs" />
     <Compile Include="Commands\Homes\CmdHAllowGuns.cs" />
     <Compile Include="Commands\Moderation\CmdShowNames.cs" />
